--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     <!-- Spin Button -->
     <button id="spin-btn">Spin</button>
 
+    <!-- Display Previous Results -->
+    <div class="history">
+        <h2>Spin History</h2>
+        <ul id="history-list"></ul>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
